# c-playground

./: CMakeLists.txt  README.md
template/: CMakeLists.txt
template/src/: hello.c  main.c
